--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 
 header{
     background-color: rgb(92, 96, 104);
-    width: 100vw;
+    max-width: 100vw;
+    margin: 0;
     padding: 10px;
     box-sizing: border-box;
 }
@@ -74,4 +75,12 @@ button{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     box-sizing: border-box;
+}
+footer{
+    background-color: rgb(92, 96, 104);
+    max-width: 100vw;
+    height: 80px;
+    margin:0;
+    margin-bottom:0;
+    padding: 0;
 }
